Fix margins for links on mobile view

--- a/src/blocks/gem/gem.pcss
+++ b/src/blocks/gem/gem.pcss
@@ -17,9 +17,10 @@
     line-height: 1.4;
     font-weight: 600;
     text-decoration: none;
+    margin-right: calc($layoutFactor * 2px);
 
-    & + & {
-      margin-left: calc($layoutFactor * 2px);
+    &:last-child {
+      margin-right: 0;
     }
   }
 }
